--- a/scoring/score.html
+++ b/scoring/score.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="script" href="score.js" />
     <style>
       @font-face {
         font-family: "Lemon Milk";
@@ -201,5 +200,7 @@
         Change Player 2 Name
       </button>
     </div>
+
+    <script src="score.js"></script>
   </body>
 </html>
